WH-127 - Fixed first name extending boundary on banner. WH-128 - Aligned update password fields on settings page.

--- a/src/main/resources/edu/qut/cab302/wehab/css/MainStyleSheet.css
+++ b/src/main/resources/edu/qut/cab302/wehab/css/MainStyleSheet.css
@@ -112,13 +112,9 @@
   -fx-font-family: "Inter";
   -fx-padding: 10px;
   -fx-spacing: 30px;
-  //-fx-alignment: CENTER;
+  -fx-alignment: CENTER;
 }
 
-.main-header VBox {
-  -fx-max-width: 100px;
-  -fx-wrap-text: true;
-}
 
 .main-header Button {
   -fx-background-color: #ffffff;
@@ -280,6 +276,16 @@
     .settings-toggle-button: selected {
         -fx-background-color: #A5C894;
     }
+
+    .password_hbox {
+        -fx-pref-width: 20px;
+        -fx-spacing: 10px;
+    }
+
+    .password_hbox > .label {
+            -fx-pref-width: 50px;
+
+        }
 
     .delete-button {
         -fx-background-color: #F5F5DC;
