--- a/src/main/resources/edu/qut/cab302/wehab/css/accessible_large.css
+++ b/src/main/resources/edu/qut/cab302/wehab/css/accessible_large.css
@@ -121,11 +121,6 @@
   -fx-alignment: CENTER;
 }
 
-.main-header VBox {
-  -fx-max-width: 100px;
-  -fx-wrap-text: true;
-}
-
 .main-header Button {
   -fx-background-color: #ffffff;
   -fx-border-color: #000000;
@@ -296,6 +291,16 @@
     .settings-toggle-button: selected {
         -fx-border-width: 4px;
     }
+
+    .password_hbox {
+        -fx-pref-width: 20px;
+        -fx-spacing: 10px;
+    }
+
+    .password_hbox > .label {
+            -fx-pref-width: 50px;
+
+        }
 
     .delete-button {
         -fx-background-color: #ffffff;
